kubernetes/apps/lidarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: lidarr
  annotations:
    external-dns.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`music.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: lidarr
          port: 8686
  tls: {}
